Added 'B'ackwards option Fixed opening of gates with a fixed destination Added block metadata support

--- a/README
+++ b/README
@@ -30,6 +30,7 @@ Hmm.. None?
  - stargate.option.alwayson - Allow this user/group to create always-on gates.
  - stargate.option.private - Allow this user/group to create private gates.
  - stargate.option.free - Allow this user/group to create free gates.
+ - stargate.option.backwards - Allow this user/group to create backwards gates.
 
 =============
 Instructions
@@ -45,7 +46,12 @@ Sign Layout:
  - Line 1: Gate Name (Max 12 characters)
  - Line 2: Destination Name [Optional] (Max 12 characters, used for fixed-gates only)
  - Line 3: Network name [Optional] (Max 12 characters)
- - Line 4: Options [Optional] ('A' for always-on fixed gate, 'H' for hidden networked gate, 'P' for a private gate, 'F' for a free gate)
+ - Line 4: Options [Optional] :
+ 			'A' for always-on fixed gate
+ 			'H' for hidden networked gate
+ 			'P' for a private gate
+ 			'F' for a free gate
+ 			'B' is for a backwards facing gate (You will exit the back)
 
 Options:
 The options are the single letter, not the word. So to make a private hidden gate, your 4th line would be 'PH'.
@@ -100,6 +106,9 @@ portal-open/closed are used to define the material in the gate when it is open o
 "X" and "-" are used to define block "types" for the layout (Any single-character can be used, such as "#").
 In the gate format, you can see we use "X" to show where obsidian must be, "-" where the controls (Button/sign) are.
 You will also notice a "*" in the gate layout, this is the "exit point" of the gate, the block at which the player will teleport in front of.
+As of version 0.5.5 you can supply block data in the format
+X=35:15
+Which would only allow black wool. If no data is supplied any version of a block will work (Any color of wool for example)
  
 ==============
 Configuration
@@ -130,6 +139,10 @@ maxgates - If non-zero, will define the maximum amount of gates allowed on a net
 =============
   Changes
 =============
+[Version 0.5.5]
+ - Added 'B'ackwards option
+ - Fixed opening of gates with a fixed gate as a destination
+ - Added block metadata support to gates
 [Version 0.5.1]
  - Take into account world/network restrictions for Vehicles
  - Properly teleport empty vehicles between worlds
