--- a/README
+++ b/README
@@ -139,6 +139,8 @@ maxgates - If non-zero, will define the maximum amount of gates allowed on a net
 =============
   Changes
 =============
+[Version 0.6.0]
+ - Oh god the changes, hopefully I didn't fuck anything up, README updates coming later
 [Version 0.5.5]
  - Added 'B'ackwards option
  - Fixed opening of gates with a fixed gate as a destination
