=============    Updates ============= Please visit http://forum.thedgtl.net for all updates and support!

--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 =============
+   Updates
+=============
+Please visit http://forum.thedgtl.net for all updates and support!
+
+=============
  Description
 =============
 This is a port of the Stargate plugin from hMod by Dinnerbone.
