--- a/README
+++ b/README
@@ -197,6 +197,8 @@ createConflict=Gate conflicts with existing gate
 =============
   Changes
 =============
+[Version 0.7.2]
+ - Make it so you can still destroy gates in Survival mode
 [Version 0.7.1]
  - Added destMemory option
  - Switched to sign.update() as Bukkit implemented my fix
