--- a/README
+++ b/README
@@ -154,7 +154,6 @@ freegatesgreen - Enable to make gates that won't cost the player money show up a
 toowner - Whether the money from gate-use goes to the owner or nobody
 maxgates - If non-zero, will define the maximum amount of gates allowed on any network.
 lang - The language to use (Included languages: en, de)
-destMemory - Whether to set the first destination as the last used destination for all gates
 
 debug - Whether to show massive debug output
 permdebug - Whether to show massive permission debug output
@@ -197,6 +196,17 @@ createConflict=Gate conflicts with existing gate
 =============
   Changes
 =============
+[Version 0.7.3.1-pre]
+ - Rever sign updating to pre-1.0.0 method
+[Version 0.7.3.1]
+ - Hopefully fixed "><" issue with destMemory
+[Version 0.7.3]
+ - Lava and water gates no longer destroy on reload
+ - "sg reload" now closes gates before reloading
+ - Added Vault support
+ - Added missing "useiConomy" option in config
+[Version 0.7.2.1]
+ - Quick fix for an NPE
 [Version 0.7.2]
  - Make it so you can still destroy gates in Survival mode
 [Version 0.7.1]
