--- a/README
+++ b/README
@@ -198,6 +198,8 @@ createConflict=Gate conflicts with existing gate
 =============
   Changes
 =============
+[Version 0.7.4.1]
+ - Quick API update to add player to the activate event
 [Version 0.7.4.0]
  - Fixed issue with non-air closed portal blocks
  - Added StargatePortalEvent/onStargatePortal event
