--- a/README
+++ b/README
@@ -198,6 +198,8 @@ createConflict=Gate conflicts with existing gate
 =============
   Changes
 =============
+[Version 0.7.4.3]
+ - Implement StargateAccessEvent, used for bypassing permission checks/denying access to gates.
 [Version 0.7.4.2]
  - stargate.create.personal permission now also allows user to use personal gates
 [Version 0.7.4.1]
