--- a/README
+++ b/README
@@ -201,6 +201,8 @@ createConflict=Gate conflicts with existing gate
 =============
   Changes
 =============
+[Version 0.7.5.6]
+ - Quick update to the custom event code, works with R5+ now.
 [Version 0.7.5.5]
  - PEX is built of fail, if we have it, use bridge instead.
 [Version 0.7.5.4]
