--- a/README
+++ b/README
@@ -202,6 +202,8 @@ createConflict=Gate conflicts with existing gate
 =============
   Changes
 =============
+[Version 0.7.6.1]
+ - API update to support StargateCommand
 [Version 0.7.6]
  - Moved gate opening/closing to a Queue/Runnable system to resolve server lag issues with very large gates
 [Version 0.7.5.11]
